--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -86,7 +86,7 @@ body {
   display: inline-block;
   overflow: hidden; /* Oculta el texto cuando no está escrito */
   white-space: nowrap; /* Asegura que el texto no haga saltos de línea */
-  animation: typingErasing 15s steps(30, end) infinite;
+  animation: typingErasing 12s steps(40, end) infinite; /* Más lento */
   animation-fill-mode: both; /* Mantiene el estado final de las animaciones */
 }
 
@@ -108,7 +108,6 @@ body {
     width: 0; /* Mantiene el texto borrado */
   }
 }
-
 
 
 
