--- a/src/styles/gitContent.css
+++ b/src/styles/gitContent.css
@@ -2,45 +2,40 @@
 .github-projects {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-  margin-top: 20px;
+  gap: 40px;
+  justify-content: flex-start; /* Alinear a la izquierda */
+  margin-top: 60px;
 }
 
+/* Estilo para cada card de repos */
 .repo {
   width: 300px;
-  padding: 20px;
+  padding: 20px 40px 40px 40px; /* Reduce padding-top para acercar el título al borde */
   border: 1px solid #ddd;
   border-radius: 12px;
   background-color: #f9f9f9;
   text-align: center;
-  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; /* Agregamos la transición */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-/* Imagen del proyecto */
-.repo-image {
-  width: 100%;
-  height: 180px;
-  object-fit: cover;
-  border-radius: 8px;
-  margin-bottom: 15px;
-}
-
+/* Efecto de ampliación al pasar el ratón sobre la card */
 .repo:hover {
-  transform: scale(1.05);
-  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.15);
+  transform: scale(1.05); /* Ampliar ligeramente la tarjeta */
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Agregar más sombra para el efecto */
 }
 
+/* Títulos de las cards */
 .repo h2 {
-  font-size: 1.4rem;
-  margin-bottom: 10px;
+  font-size: 1.6rem;
+  margin-bottom: 0; /* Elimina el margen inferior */
   color: #372a61;
 }
 
+/* Descripción de las cards */
 .repo p {
   font-size: 1rem;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   color: #555;
 }
 
@@ -53,6 +48,7 @@
   margin-bottom: 10px;
 }
 
+/* Etiquetas de los lenguajes */
 .language-tag {
   background-color: #00ff99;
   color: white;
@@ -61,12 +57,14 @@
   font-size: 0.8rem;
   font-weight: bold;
   transition: background-color 0.3s;
+  margin-bottom: 20px;
 }
 
 .language-tag:hover {
   background-color: #00cc77;
 }
 
+/* Enlace de la card */
 .repo-link {
   text-decoration: none;
   color: #00ff99;
@@ -84,4 +82,23 @@
 
 .repo-link:focus {
   outline: none;
+}
+
+/* Responsividad */
+@media (max-width: 1024px) {
+  .repo {
+    width: calc(50% - 20px); /* Ajustar a dos columnas en pantallas más pequeñas */
+  }
+}
+
+@media (max-width: 768px) {
+  .repo {
+    width: calc(50% - 20px); /* Dos columnas para tablets */
+  }
+}
+
+@media (max-width: 480px) {
+  .repo {
+    width: 100%; /* Una columna para pantallas muy pequeñas */
+  }
 }
